k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-hello-service
spec:
  selector:
    app: spring-hello
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
